src/garage/main.scss
@import '../css/fantasque/stylesheet.css';
@import '~codemirror/lib/codemirror.css';
@import '~codemirror/theme/material-ocean.css';

@import '../css/base';

.disappearing-one,
.disappearing-two {
  animation-duration: 1000ms;
  animation-fill-mode: forwards;
}

.disappearing-one {
  animation-name: disappearingAnimationOne;
}

.disappearing-two {
  animation-name: disappearingAnimationTwo;
}

@keyframes disappearingAnimationOne {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@keyframes disappearingAnimationTwo {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

.garage {
  font-size: 1.1rem;
  height: 100%;

  ._root-app-root {
    @import '../battle-viewer/main';

    width: 100%;
    height: 100%;

    ._ui {
      // fix codemirror vertical overflow
      display: flex;
      flex-direction: column;

      ._bar {
        @include bar;
      }

      ._editor {
        // to prevent vertical overflow
        height: 100%;
        overflow: auto;
        margin-left: map_get($spacers, 4);

        .CodeMirror {
          height: 100%;

          * {
            font-family: $code-font;
            line-height: 1.1;
          }
        }

        .CodeMirror-scroll {
          // add space on top of code that can scroll
          padding-top: map_get($spacers, 4);
        }

        .CodeMirror-gutters {
          background: var(--white);
          border-right: 0;
          width: 40px;
        }

        .CodeMirror-linenumber {
          color: var(--grey-2);
        }

        .inline-error {
          color: var(--orange) !important;
          position: relative;

          &::after {
            content: '';
            width: 100%;
            height: 3px;
            left: 0;
            right: 0;
            bottom: 0;
            position: absolute;
            background: var(--orange);
          }
        }
      }
    }

    ._viewer {
      ._app-root {
        height: 100%;
      }
    }

    & > .gutter {
      border-right: $border-2;
      border-left: $border-2;
      cursor: col-resize;
    }
  }
}

